# DocTalk

./: .gitignore  CLOUD_STORAGE.md  README.md
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: App.css  App.jsx  index.css
client/src/api/: index.js
client/src/components/: ChatHistory.jsx  ChatInput.css  ChatInput.jsx  ChatLayout.css  ChatLayout.jsx  ChatMessages.css  ChatMessages.jsx  DocumentGraph.jsx  ErrorBoundary.jsx  FilterPanel.jsx  HybridResults.jsx  MessageBubble.css  MessageBubble.jsx  PerplexicaControls.jsx  ReasoningViewer.jsx  SearchMode.jsx  SearchResults.jsx  Sidebar.css  Sidebar.jsx  SourceViewer.jsx  ThemeToggle.jsx
client/src/context/: AuthContext.jsx  ThemeContext.jsx
client/src/pages/: Chat.jsx  Dashboard.jsx  DeepSearch.jsx  Documents.jsx  Landing.jsx  (+2 more)
server/: .env.example  main.py  pyproject.toml  requirements.txt
server/api/: auth.py  chat_history.py  deep_search_api.py  perplexica_api.py  query.py  search.py
server/auth/: dependencies.py
server/config/: perplexica.py
server/db/: mongo.py
server/mcp/: __init__.py  lightpanda_extractor.py  lightpanda_search.py  mcp_client.py  mcp_server.py
server/middleware/: error_handler.py
server/rag/: chains.py  deep_search.py  knowledge_graph.py  memory_chain.py  query_analyzer.py  reindex.py  result_synthesizer.py  retriever.py  semantic_reasoner.py  streaming_chain.py  vectorstore.py
server/services/: perplexica_service.py
server/storage/: __init__.py  chat_storage.py  cloud_storage.py  search_cache.py  session_manager.py
(+2 files in other folders)
